<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AudioSpectrum</string>
	<string name="start_recording">\tStart recording samples.</string>
	<string name="stop_recording">\tStop recording.</string>
	<string name="save_recording">\tSave the windowed samples.</string>
	<string name="play_recording">\tPlay the windowed samples.</string>
	<string name="left_side">\tLeft end of samples.</string>
	<string name="right_side">\tRight end of samples.</string>
	<string name="auto_range">\tToggle auto range of amplitude.</string>
	<string name="fft">\tDetermine dominant frequency in window.</string>
	<string name="help">\tHelp and information.</string>
	<string name="reset_graph">\tReset window to full recorded sample time.</string>
	<string name="linear">\tSwitch between Linear or Log scale.</string>
	<string name="range_label">Magnitude</string>
	<string name="domain_label">time</string>
	<string name="interval_label">Interval</string>	
	<string name="recommended">Recommended window minimum: </string>	
	<string name="frequency">Frequency (Hz) of the four highest power: </string>
	<string name="window">Window: </string>
	<string name="samples">Samples: </string>
	<string name="fft_title">FFT results</string>
	<string name="info">AudioSpectrum displays the sprectrum of a WAV file.\n
						Gestures select graph areas:\n
						Tap one finger to mark a frequency.\n
						Two finger pinch or squeeze to zoom.\n
						Drag to pan left and right.\n
	</string>
</resources>
